--- a/src/style/card.css
+++ b/src/style/card.css
@@ -71,3 +71,8 @@
     /* clip-path: polygon(3% 0, 97% 0, 100% 3%, 100% 100%, 0 100%, 0 3%); */
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 0 10px, 10px 0);
   }
+
+
+  /* left card */
+
+ 
