--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,82 @@
 body{
     background-color: black;
 }
+
+/* .gradient-border-card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 16px;
+    background: linear-gradient(131.72deg, #00AEEF 1.01%, rgba(0, 174, 239, 0) 49.54%, #00AEEF 98.07%);
+    padding: 3px;
+  }
+
+
+  .card-content {
+    width: 100%;
+    height: 100%;
+    background-color: #0a0a0a;
+    border-radius: 14px;
+    position: relative;
+  }
+  
+  .card-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: 
+      linear-gradient(#6D6D6D40, 1px, transparent 1px),
+      linear-gradient(90deg, #6D6D6D40 1px, transparent 1px);
+    background-size: 70px 70px;
+    border-radius: 14px;
+  }
+   */
+
+   .gradient-border-card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 16px;
+    background: linear-gradient(131.72deg, #00AEEF 1.01%, rgba(0, 174, 239, 0) 49.54%, #00AEEF 98.07%);
+    padding: 3px;
+    overflow: hidden;
+  }
+  
+  .card-content {
+    width: 100%;
+    height: 100%;
+    background-color: #0a0a0a;
+    border-radius: 14px;
+    position: relative;
+  }
+  
+  .card-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: 
+      linear-gradient(#6D6D6D40, 1px, transparent 1px),
+      linear-gradient(90deg, #6D6D6D40 1px, transparent 1px);
+    background-size: 70px 70px;
+    border-radius: 14px;
+  }
+  
+  .radial-blur-overlay {
+    position: absolute;
+    width: 1000px;
+    height: 1000px;
+    left: -450px;  /* Position to bottom left */
+    bottom: -450px;
+    background: radial-gradient(circle at center, #4890AB85 0%, rgba(72, 144, 171, 0) 90%);
+    opacity: 0.40;
+    backdrop-filter: blur(248.4px);
+    pointer-events: none;
+    z-index: 1;
+  }
+  
