--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ body{
     background: linear-gradient(131.72deg, #00AEEF 1.01%, rgba(0, 174, 239, 0) 49.54%, #00AEEF 98.07%);
     padding: 3px;
     overflow: hidden;
+    z-index: 10;
   }
   
   .card-content {
@@ -55,6 +56,7 @@ body{
     background-color: #0a0a0a;
     border-radius: 14px;
     position: relative;
+    z-index: 10;
   }
   
   .card-content::before {
@@ -74,20 +76,22 @@ body{
     position: absolute;
     width: 55%; /* Increase width to extend the blur effect */
     height: 55%; /* Increase height to extend the blur effect */
-    top: 0; /* Move to the top-left corner */
-    left: 0; /* Move to the top-left corner */
+    top: -300px; /* Move to the top-left corner */
+    left: -250px; /* Move to the top-left corner */
     background: radial-gradient(
-      circle at top left, /* Start the gradient from top-left */
+      circle, /* Start the gradient from top-left */
       rgba(72, 144, 171, 0.85) 0%, /* Bright color at the center */
       rgba(72, 144, 171, 0.3) 45%, /* Fade out as it spreads */
-      rgba(72, 144, 171, 0) 70% /* Transparent at the outer edge */
+      rgba(72, 144, 171, 0) 90% /* Transparent at the outer edge */
     );
-    opacity: 0.6;
-    backdrop-filter: blur(150px); /* Apply the blur */
+    opacity: 0.5;
+    backdrop-filter: blur(200px); /* Apply the blur */
     pointer-events: none;
-    z-index: 1;
+    z-index: -1;
     mix-blend-mode: screen;
-  }/* Radial Blur Overlay at Bottom-Left Corner with #682184 */
+  }
+  
+  /* Radial Blur Overlay at Bottom-Left Corner with #682184 */
 /* Radial Blur Overlay at Bottom-Left Corner with #682184 */
 .radial-blur-overlay-bottom-left {
   position: absolute;
